--- a/xxl-job-admin/src/main/resources/webapp/500.html
+++ b/xxl-job-admin/src/main/resources/webapp/500.html
@@ -23,7 +23,7 @@
 	<div class="dialog"> 
 	    <h1>System Error</h1>
 	    <p>Oops! Page not found.</p>
-		<a href="javascript:window.location.href='${request.contextPath}/'">Back</a>
+		<a href="javascript:window.location.href='/'">Back</a>
 	</div>
 
 </body>
